--- a/en/about.html
+++ b/en/about.html
@@ -39,7 +39,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -47,7 +47,7 @@
 
   <header class="header">
     
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom" data-header>
       <div class="container">
 
         <a href="home.html" class="logo">Kaptam</a>
@@ -116,7 +116,7 @@
 
 		<!--
 		-----------------------------------------------
-        #About us
+        MARK: #About us
 		-----------------------------------------------
 		-->
 	  
@@ -138,11 +138,11 @@
             video production for companies, PC building, playing various board games and years of experience in video gaming.
             <br>
             <br>
-            In 2025, in addition to weekly club game nights, we held public LAN party and three fighting game tournaments. In the future,
+            In 2025, in addition to weekly game evenings, we held public LAN party and seven fighting game tournaments. In the future,
             we will continue weekly activities and monthly tournaments, while improving our operations to be better for our visitors.
             <br>
             <br>
-            Anyone can attend our game nights (except for board game nights only for LAB/LUT students and staff).
+            Anyone can attend our game nights and they are free.
             Instructions for attending are found their specific club pages, links in the top bar.
             <br>
             <br>
@@ -167,7 +167,7 @@
 
 		<!--
 		-----------------------------------------------
-        #Looking for help
+        MARK: #Looking for help
 		-----------------------------------------------
 		-->
 	  
@@ -213,7 +213,7 @@
 
 		<!--
 		-----------------------------------------------
-        #FOOTER
+        MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -350,7 +350,7 @@
 
           <div class="social-wrapper">
 
-			    <p class="footer-list-title">Videopelikerho</p>
+			    <p class="footer-list-title">Video games club</p>
 
             <ul class="contact-list">
 
@@ -378,7 +378,7 @@
 
           <div class="social-wrapper">
 
-            <p class="footer-list-title">Lautapelikerho</p>
+            <p class="footer-list-title">Board games club</p>
 
             <ul class="contact-list">
               <li>
@@ -408,7 +408,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry All Right Reserved. 
+          &copy; 2026 Kaptam Gamers ry All Right Reserved. 
           Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
