--- a/en/boardgames.html
+++ b/en/boardgames.html
@@ -39,7 +39,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -47,7 +47,7 @@
 
   <header class="header">
     
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom" data-header>
       <div class="container">
 
         <a href="home.html" class="logo">Kaptam</a>
@@ -115,7 +115,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
 
@@ -130,10 +130,10 @@
             <p class="hero-subtitle">BoardGamesKerho</p>
 
             <h1 class="h1 hero-title">
-              LUT/LAB Lahti's <span class="span">Board Games</span> Hub
+              Lahti's <span class="span">Board Games</span> Hub
             </h1>
-            <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-43px">
-            Activity is on pause
+            <p class="hero-text"> <span style="color:#03b1fc; font-size:40px; font-weight: bold; margin-bottom:-43px">
+            Weekly starting 6.2.2026
             </span>
             <p class="hero-text"> <span>
               Board games evening is hosted Mondays 16:00 - 20:30 at Mukkulankatu campus at the A247 second floor cafe, near the stairs.
@@ -156,7 +156,7 @@
 	  
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 1
+        MARK: #Guide for arriving part 1
 		-----------------------------------------------
 		-->
 
@@ -171,7 +171,7 @@
               Guide for arriving to <span class="span"> weekly session</span>
             </h2>
 			<div class="responsive-iframe">
-           <iframe width="660" height="371" src="https://www.youtube.com/embed/1i061oALdgE" title="Kaptam Gamers" 
+           <iframe width="660" height="371" src="https://www.youtube.com/embed/c4HyGYseh5Y" title="Kaptam Gamers" 
 		   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
 		   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 		   </iframe>
@@ -182,7 +182,7 @@
 
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 2
+        MARK: #Guide for arriving part 2
 		-----------------------------------------------
 		-->
 		
@@ -198,15 +198,17 @@
           <div class="hero-content">
 
             <p class="hero-text" align="center">
-              LAB university of applied sciences<br>
-			  Mukkulankatu 19<br>
-			  15210 Lahti<br>
-			  In the campus map at floor 2, A247 second floor cafe<br>
-			  <a href="https://maps.app.goo.gl/Y5xQvMHZqdtBGVLA6" target="_blank" style="color: DodgerBlue;"><u>Google Maps</u></a> <br>
-			  Enter from the main red entrance (with all glass walls). If you arrive before 16:00, you can just walk in.
-			  If you arrive after 16:00, you'll need ether have a student card to enter, or ask somebody our WhatsApp & Telegram channels to open
-			  the door for you. Links for joining them are in to bottom of this webpage.
-			</p>
+              Lahti Science Park<br>
+              Niemenkatu 73<br>
+              15140 Lahti<br>
+              Lobby near the front door reception<br>
+              <a href="https://maps.app.goo.gl/Py8EDD9vp7Rr4HUa7" target="_blank" class="blue_text"
+                style="color: DodgerBlue;"><u>Google Maps</u></a> <br>
+              Enter from the main entrance (revolving door) or from D1. If you arrive before 16:00, you can just walk in.
+              If you arrive after 16:00, you'll need to ask somebody from our WhatsApp & Discord channels, or phone number +358 40
+              850 5051 to open
+              the door for you. Links for joining them are in to bottom of this webpage.
+            </p>
 		  </div>
         <div>  
 		
@@ -216,7 +218,7 @@
 	  
 		<!-- 
 		-----------------------------------------------
-        #Gallery
+        MARK: #Gallery
 		-----------------------------------------------
 		-->
 	  
@@ -332,7 +334,7 @@
 
 		<!-- 
 		-----------------------------------------------
-		#FOOTER
+		MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -470,7 +472,7 @@
 
           <div class="social-wrapper">
 
-			    <p class="footer-list-title">Videopelikerho</p>
+			    <p class="footer-list-title">Video games club</p>
 
             <ul class="contact-list">
 
@@ -498,7 +500,7 @@
 
           <div class="social-wrapper">
 
-            <p class="footer-list-title">Lautapelikerho</p>
+            <p class="footer-list-title">Board games club</p>
 
             <ul class="contact-list">
               <li>
@@ -528,7 +530,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry All Right Reserved. 
+          &copy; 2026 Kaptam Gamers ry All Right Reserved.
           Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
@@ -551,7 +553,7 @@
   </div>
 
   <div class="image-indicator" id="imageIndicator"></div>
-</div>  <!-- 
+</div>  
 
   <!-- 
     - custom js link
