--- a/en/checkout.html
+++ b/en/checkout.html
@@ -35,7 +35,7 @@
 
   <!--
   -----------------------------------------------
-    #HEADER
+    MARK: #HEADER
   -----------------------------------------------
   -->
 
@@ -95,13 +95,22 @@
 
   </header>
 
+    <!-- 
+    -----------------------------------------------
+        MARK: #Checkout
+    -----------------------------------------------
+    -->
+
   <main>
     <article class="checkout-page">
 
       <!-- Main Checkout View -->
       <div id="checkout-main" class="checkout-container">
 
-        <h1 class="checkout-title">Checkout</h1>
+        <h1 class="checkout-title">Reservation 
+          <span style="font-size:27px"> for the next weekly</span>
+        </h1>
+
 
         <!-- Previous Cart Section -->
         <div class="checkout-section previous-cart-section">
@@ -119,14 +128,14 @@
             <!-- Cart items will be rendered here -->
           </div>
           <p id="empty-cart-message" class="empty-cart-message" style="display: none;">
-            Your cart is empty. <a href="videogames_list.html">Browse games</a>
+            Your cart is empty. <a href="v_list.html">Browse games</a>
           </p>
         </div>
 
         <!-- Info Notice -->
         <div class="checkout-section info-notice">
           <ion-icon name="information-circle-outline"></ion-icon>
-          <p>Not installed games: If it has a large install size, it might take 3-5 days to be installed.</p>
+          <p>For "not installed" games, it will take 3-5 days to be installed.</p>
         </div>
 
         <!-- Order Form -->
@@ -163,7 +172,7 @@
           </div>
 
           <div class="checkout-actions">
-            <a href="videogames_list.html" class="checkout-btn secondary">
+            <a href="v_list.html" class="checkout-btn secondary">
               <ion-icon name="arrow-back-outline"></ion-icon>
               Continue Browsing
             </a>
@@ -197,7 +206,7 @@
           </div>
 
           <div class="thank-you-actions">
-            <a href="videogames_list.html" class="checkout-btn primary">
+            <a href="v_list.html" class="checkout-btn primary">
               <ion-icon name="game-controller-outline"></ion-icon>
               Back to Games
             </a>
@@ -222,7 +231,7 @@
 
   <!--
   -----------------------------------------------
-    #FOOTER
+    MARK: #FOOTER
   -----------------------------------------------
   -->
 
