--- a/en/fighting.html
+++ b/en/fighting.html
@@ -37,7 +37,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -45,7 +45,7 @@
 
   <header class="header">
     
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom" data-header>
       <div class="container">
 
         <a href="home.html" class="logo">Kaptam</a>
@@ -107,18 +107,9 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
-
-
-
-
-
-        <!-- 
-          - #Introduction
-        -->
-	
 
 	  
        <section class="section hero" id="home" aria-label="home"
@@ -257,7 +248,7 @@
 
 
 		-----------------------------------------------
-        #About us
+        MARK: #Info
 		-----------------------------------------------
 		-->
 	    
@@ -333,6 +324,11 @@
           <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram pictures</u></a>
           ~~~
           <br>
+          07.08.2025 - Street Fighter 6
+          <a href="https://challonge.com/pxvmrgyo" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a>
+          <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue;"><u>Last match in youtube</u></a>
+          ~~~
+          <br>
           25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
           ~~~
@@ -354,7 +350,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #Gallery
+        MARK: #Gallery
 		-----------------------------------------------
 		-->
 	  
@@ -467,7 +463,7 @@
 
 		<!-- 
 		-----------------------------------------------
-		#FOOTER
+		MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -604,7 +600,7 @@
 
           <div class="social-wrapper">
 
-			    <p class="footer-list-title">Videopelikerho</p>
+			    <p class="footer-list-title">Video games club</p>
 
             <ul class="contact-list">
 
@@ -632,7 +628,7 @@
 
           <div class="social-wrapper">
 
-            <p class="footer-list-title">Lautapelikerho</p>
+            <p class="footer-list-title">Board games club</p>
 
             <ul class="contact-list">
               <li>
@@ -662,7 +658,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry All Right Reserved. 
+          &copy; 2026 Kaptam Gamers ry All Right Reserved.
           Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
