--- a/en/home.html
+++ b/en/home.html
@@ -39,7 +39,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -47,7 +47,7 @@
 
   <header class="header">
 
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom" data-header>
       <div class="container">
 
         <a href="home.html" class="logo">Kaptam</a>
@@ -108,7 +108,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
 
@@ -161,7 +161,7 @@
 
 
         <!-- 
-          - #CLUBS
+          - MARK: #Clubs
         -->
 
         	<section style="background-color: #1a141a;">
@@ -190,7 +190,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg"><span style="color:blue; font-size:2rem">On pause</span></div>
+                    <div class="card-badge skewBg"><span style="color:blue; font-size:1.6rem">Starting 6.2.2026</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">BoardGamesKerho <br><br><span class="span">Board Games Club</span></div>
@@ -210,7 +210,7 @@
 
                   <div class="card-content">
 
-                    <div class="card-badge skewBg"><span style="color:blue; font-size:2rem">On pause</span></div>
+                    <div class="card-badge skewBg"><span style="color:blue; font-size:1.6rem">Starting 6.2.2026</span></div>
 
                     <h3 class="h3">
                       <div class="card-title">VideoGamesKerho<br><br><span class="span">Video Games Club</span></div>
@@ -260,7 +260,7 @@
 
 
         <!-- 
-        #BLOG
+        MARK: #Blog
         -->
 
 
@@ -284,7 +284,8 @@
 
                 <figure class="card-banner img-holder">
                   <img src="../assets/images/events_images/bbcf_banner_eng.jpg" width="324" height="300" loading="lazy"
-                    alt="BlazBlue tournaus" class="img-cover">
+                    alt="BlazBlue tournaus" class="img-cover"
+                    style="border: 3px solid; border-color: var(--xiketic_90); background-color: var(--light-gray-1)">
                 </figure>
 
                 <div class="card-content">
@@ -317,6 +318,10 @@
 					<br>
 					Time: <br>
 					27.12.2025 Saturday @ 14:00 - 22:00
+          <br>
+          15:00 Sign up for tournament ends
+          <br>
+          16:00 Tournament starts
 					<br>
 					<br>
 					Prizes: <br>
@@ -350,7 +355,7 @@
 
     <!--
 		-----------------------------------------------
-        #FOOTER
+        MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -486,7 +491,7 @@
 
           <div class="social-wrapper">
 
-			    <p class="footer-list-title">Videopelikerho</p>
+			    <p class="footer-list-title">Video games club</p>
 
             <ul class="contact-list">
 
@@ -514,7 +519,7 @@
 
           <div class="social-wrapper">
 
-            <p class="footer-list-title">Lautapelikerho</p>
+            <p class="footer-list-title">Board games club</p>
 
             <ul class="contact-list">
               <li>
@@ -544,7 +549,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry All Right Reserved. 
+          &copy; 2026 Kaptam Gamers ry All Right Reserved.
           Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
