--- a/en/videogames.html
+++ b/en/videogames.html
@@ -39,7 +39,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -47,7 +47,7 @@
 
   <header class="header">
 
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom" data-header>
       <div class="container">
 
         <a href="home.html" class="logo">Kaptam</a>
@@ -116,7 +116,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
 
@@ -133,8 +133,8 @@
             <h1 class="h1 hero-title">
               Lahti's <span class="span">Video Games</span> Hub
             </h1>
-            <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-40px">
-            Activity is on pause
+            <p class="hero-text"> <span style="color:#03b1fc; font-size:40px; font-weight: bold; margin-bottom:-40px">
+            Weekly starting 6.2.2026
             </span>
             <p class="hero-text"><span>
               Video games evening is hosted Fridays from 16:00 - 20:30 at Niemenkatu 73 lobby. Up to 50 people per evening.
@@ -149,7 +149,7 @@
 	  
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 1
+        MARK: #Guide for arriving part 1
 		-----------------------------------------------
 		-->
 
@@ -164,7 +164,7 @@
               Guide for arriving to <span class="span"> weekly session</span>
             </h2>
 			<div class="responsive-iframe">
-           <iframe width="660" height="371" src="https://www.youtube.com/embed/TklLSU8NPxE" title="Kaptam Gamers" 
+           <iframe width="660" height="371" src="https://www.youtube.com/embed/c4HyGYseh5Y" title="Kaptam Gamers" 
 		   frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
 		   referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 		   </iframe>
@@ -175,7 +175,7 @@
 
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 2
+        MARK: #Guide for arriving part 2
 		-----------------------------------------------
 		-->
 		
@@ -197,7 +197,7 @@
 			  Lobby near the front door reception<br>
 			  <a href="https://maps.app.goo.gl/Py8EDD9vp7Rr4HUa7" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Google Maps</u></a> <br>
 			  Enter from the main entrance (revolving door) or from D1. If you arrive before 16:00, you can just walk in.
-			  If you arrive after 16:00, you'll need to ask somebody from our WhatsApp & Telegram channels to open
+			  If you arrive after 16:00, you'll need to ask somebody from our WhatsApp & Discord channels, or phone number +358 40 850 5051 to open
 			  the door for you. Links for joining them are in to bottom of this webpage.
 			</p>
 		  </div>
@@ -208,7 +208,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #Gallery
+        MARK: #Gallery
 		-----------------------------------------------
 		-->
 	  
@@ -319,7 +319,7 @@
 
 		<!--
 		-----------------------------------------------
-        #FOOTER
+        MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -456,7 +456,7 @@
 
           <div class="social-wrapper">
 
-			    <p class="footer-list-title">Videopelikerho</p>
+			    <p class="footer-list-title">Video games club</p>
 
             <ul class="contact-list">
 
@@ -484,7 +484,7 @@
 
           <div class="social-wrapper">
 
-            <p class="footer-list-title">Lautapelikerho</p>
+            <p class="footer-list-title">Board games club</p>
 
             <ul class="contact-list">
               <li>
@@ -514,7 +514,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry All Right Reserved. 
+          &copy; 2026 Kaptam Gamers ry All Right Reserved.
           Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
@@ -552,7 +552,7 @@
   </div>
 
   <div class="image-indicator" id="imageIndicator"></div>
-</div>  <!-- 
+</div>
 
  <!-- 
     - custom js link
