--- a/fi/galleria.html
+++ b/fi/galleria.html
@@ -37,7 +37,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -105,26 +105,9 @@
   <main style="background-color:#1d191f">
     <article>
 
-		<!-- 
-		-----------------------------------------------
-        #HERO
-		-----------------------------------------------
-		-->
-
-
-
-
-
-        <!-- 
-          - #Introduction
-        -->
-	
-
-	  
-       
 	  	<!--
 		-----------------------------------------------
-        #Pictures
+        MARK: #Pictures
 		-----------------------------------------------
 		-->
 		
@@ -236,7 +219,7 @@
           <br>
 
           <!--
-          Tournament change
+          MARK: Tournament change
       		-->
 
           <h2 style="color: #fff; text-align:left; margin-bottom: 10px">Street Fighter 6 Turnaus</h2>
@@ -288,7 +271,7 @@
           <br>
 
           <!--
-          Tournament change
+          MARK: Tournament change
       		-->
 
 <h2 style="color: #fff; text-align:left; margin-bottom: 10px">Street Fighter 3rd Strike Turnaus</h2>
@@ -380,7 +363,7 @@
           </ul>
 
           <!--
-          Tournament change
+          MARK: Tournament change
       		-->
 
           <br>
@@ -477,7 +460,7 @@
           </ul>
 
           <!--
-          Tournament change
+          MARK: Tournament change
       		-->
 
           <br>
@@ -529,7 +512,7 @@
           </ul>
 
           <!--
-          Tournament change
+          MARK: Tournament change
       		-->
 
           <br>
@@ -631,7 +614,7 @@
 
 	  	<!--
 		-----------------------------------------------
-        #Pictures 2
+        MARK: #Pictures 2
 		-----------------------------------------------
 		-->
 			<br>
@@ -775,7 +758,7 @@
 		  
 
           <!--
-          Section change
+          MARK: Section change
       		-->
 
           <br>
@@ -936,7 +919,7 @@
 
 		<!--
 		-----------------------------------------------
-        #FOOTER
+        MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -1131,7 +1114,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry. 
+          &copy; 2026 Kaptam Gamers ry. 
           Nettisivun tehnyt <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           ja <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
@@ -1152,7 +1135,7 @@
   </div>
 
   <div class="image-indicator" id="imageIndicator"></div>
-</div>  <!-- 
+</div> 
 
 
   <!-- 
