--- a/fi/info.html
+++ b/fi/info.html
@@ -39,7 +39,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -116,7 +116,7 @@
 
 		<!--
 		-----------------------------------------------
-        #About us
+        MARK: #About us
 		-----------------------------------------------
 		-->
 	  
@@ -186,7 +186,7 @@
 
 		<!--
 		-----------------------------------------------
-        #Looking for help
+        MARK: #Looking for help
 		-----------------------------------------------
 		-->
 	  
@@ -230,7 +230,7 @@
 
 		<!--
 		-----------------------------------------------
-        #FOOTER
+        MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -425,7 +425,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry. 
+        &copy; 2026 Kaptam Gamers ry.
           Nettisivun tehnyt <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           ja <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
