--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex">
   <title>Lahti FGC</title>
 
   <!-- 
@@ -39,7 +40,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -116,7 +117,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
 
@@ -183,7 +184,7 @@
 	  
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 1
+        MARK: #Guide for arriving part 1
 		-----------------------------------------------
 		-->
 
@@ -208,7 +209,7 @@
 
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 2
+        MARK: #Guide for arriving part 2
 		-----------------------------------------------
 		-->
 		
@@ -277,7 +278,7 @@
 
     <!--
 		-----------------------------------------------
-        #Games we have
+        MARK: #Games we have
 		-----------------------------------------------
 		-->
 	  
@@ -578,9 +579,11 @@
       </section>
 
 
-      <!-- 
-      #BLOG
-      -->
+    <!-- 
+  	-----------------------------------------------
+      MARK: #Blog
+  	-----------------------------------------------
+  	-->
 
       <section class="section blog" id="events" aria-label="blog">
         <div class="container">
@@ -659,7 +662,7 @@
 
     <!-- 
 		-----------------------------------------------
-        #Gallery
+        MARK: #Gallery
 		-----------------------------------------------
 		-->
 	  
@@ -769,7 +772,7 @@
 
     <!-- 
 		-----------------------------------------------
-        #Challonge
+        MARK: #Challonge
 		-----------------------------------------------
 		-->
 
@@ -802,6 +805,11 @@
           <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
           ~~~
           <br>
+          07.08.2025 - Street Fighter 6
+          <a href="https://challonge.com/pxvmrgyo" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>
+          <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue;"><u>Viimeinen matsi youtubessa</u></a>
+          ~~~
+          <br>
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
 
@@ -830,7 +838,7 @@
 
 		<!--
 		-----------------------------------------------
-        #FOOTER
+        MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -1025,7 +1033,7 @@
      <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry. 
+        &copy; 2026 Kaptam Gamers ry.
           Nettisivun tehnyt <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           ja <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
@@ -1053,14 +1061,7 @@
   </div>
 
   <div class="image-indicator" id="imageIndicator"></div>
-</div>  <!-- 
-
-
-
-
-
-
-
+</div>  
 
   <!-- 
     - custom js link
