--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -37,7 +37,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -107,19 +107,9 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
-
-
-
-
-
-        <!-- 
-          - #Introduction
-        -->
-	
-
 	  
        <section class="section hero" id="home" aria-label="home"
         style="background-image: url('../assets/images/fighting-background6.jpg')">
@@ -261,7 +251,7 @@
 
 
 		-----------------------------------------------
-        #About us
+        MARK: #About us
 		-----------------------------------------------
 		-->
 
@@ -339,6 +329,11 @@
           <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
           ~~~
           <br>
+          07.08.2025 - Street Fighter 6
+          <a href="https://challonge.com/pxvmrgyo" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>
+          <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue;"><u>Viimeinen matsi youtubessa</u></a>
+          ~~~
+          <br>
 					25.04.2025 - Street Fighter 3rd Strike
 					<a href="https://challonge.com/bbplr63s" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
           ~~~
@@ -359,7 +354,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #Gallery
+        MARK: #Gallery
 		-----------------------------------------------
 		-->
 	  
@@ -471,7 +466,7 @@
 
 		<!-- 
 		-----------------------------------------------
-		#FOOTER
+		MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -665,7 +660,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry. 
+        &copy; 2026 Kaptam Gamers ry.
           Nettisivun tehnyt <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           ja <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
@@ -688,7 +683,7 @@
   </div>
 
   <div class="image-indicator" id="imageIndicator"></div>
-</div>  <!-- 
+</div> 
 
   <!-- 
     - custom js link
