--- a/fi/index.html
+++ b/fi/index.html
@@ -41,7 +41,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -113,7 +113,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
 
@@ -167,7 +167,7 @@
 
 
         <!-- 
-          - #CLUBS
+          MARK: #Clubs
         -->
 
 	        <section style="background-color: #1a141a;">
@@ -264,7 +264,7 @@
 
      
       <!-- 
-      #BLOG
+      MARK: #Blog
       -->
 
       <section class="section blog" id="events" aria-label="blog">
@@ -352,7 +352,7 @@
 
     <!-- 
 		-----------------------------------------------
-        #FOOTER
+        MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -544,7 +544,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry. 
+        &copy; 2026 Kaptam Gamers ry.
           Nettisivun tehnyt <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           ja <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
