--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -39,7 +39,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -116,7 +116,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
 
@@ -157,7 +157,7 @@
 	  
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 1
+        MARK: #Guide for arriving part 1
 		-----------------------------------------------
 		-->
 
@@ -183,7 +183,7 @@
 
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 2
+        MARK: #Guide for arriving part 2
 		-----------------------------------------------
 		-->
 		
@@ -221,7 +221,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #Gallery
+        MARK: #Gallery
 		-----------------------------------------------
 		-->
 	  
@@ -333,7 +333,7 @@
 
 		<!-- 
 		-----------------------------------------------
-		#FOOTER
+		MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -527,7 +527,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry. 
+        &copy; 2026 Kaptam Gamers ry.
           Nettisivun tehnyt <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           ja <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
@@ -552,7 +552,7 @@
   </div>
 
   <div class="image-indicator" id="imageIndicator"></div>
-</div>  <!-- 
+</div>  
 
 
 
