--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -39,7 +39,7 @@
 
 	<!-- 
 	-----------------------------------------------
-    #HEADER
+    MARK: #HEADER
 	-----------------------------------------------
 	-->
 
@@ -116,7 +116,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #HERO
+        MARK: #Intro
 		-----------------------------------------------
 		-->
 
@@ -154,7 +154,7 @@
 	  
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 1
+        MARK: #Guide for arriving part 1
 		-----------------------------------------------
 		-->
 
@@ -180,7 +180,7 @@
 
 		<!--
 		-----------------------------------------------
-        #Guide for arriving part 2
+        MARK: #Guide for arriving part 2
 		-----------------------------------------------
 		-->
 		
@@ -215,7 +215,7 @@
 
 		<!-- 
 		-----------------------------------------------
-        #Gallery
+        MARK: #Gallery
 		-----------------------------------------------
 		-->
 	  
@@ -326,7 +326,7 @@
 
 		<!-- 
 		-----------------------------------------------
-		#FOOTER
+		MARK: #FOOTER
 		-----------------------------------------------
 		-->
 
@@ -519,7 +519,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2025 Kaptam Gamers ry. 
+        &copy; 2026 Kaptam Gamers ry.
           Nettisivun tehnyt <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a> 
           ja <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
         </p>
@@ -545,7 +545,7 @@
   </div>
 
   <div class="image-indicator" id="imageIndicator"></div>
-</div>  <!-- 
+</div>
 
   <!-- 
     - custom js link
