--- a/fi/galleria.html
+++ b/fi/galleria.html
@@ -45,7 +45,7 @@
 
   <header class="header">
     
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom" data-header>
       <div class="container">
 
         <a href="index.html" class="logo">Kaptam</a>
