--- a/fi/videopeli.html
+++ b/fi/videopeli.html
@@ -47,7 +47,7 @@
 
   <header class="header">
 
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom" data-header>
       <div class="container">
 
         <a href="index.html" class="logo">Kaptam</a>
@@ -134,7 +134,7 @@
               Lahden <span class="span">Videopeli</span> Keskus
             </h1>
              <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-40px">
-            Toiminta on tauolla
+            Viikottaiset peli-illat alkaa 6.2.2026
             </span>
             <p class="hero-text"><span>
               Videopeli-ilta järjestetään perjantaisin klo 16:00-20:00 Niemenkatu 73 aulassa. Meillä on videopelejä & laitteistoa 50 henkilölle.
