--- a/fi/lautapeli.html
+++ b/fi/lautapeli.html
@@ -47,7 +47,7 @@
 
   <header class="header">
     
-    <div class="header-bottom skewBg" data-header>
+    <div class="header-bottom" data-header>
       <div class="container">
 
         <a href="index.html" class="logo">Kaptam</a>
@@ -131,10 +131,10 @@
             <p class="hero-subtitle">BoardGamesKerho</p>
 
             <h1 class="h1 hero-title">
-              LUT/LAB Lahden <span class="span">Lautapeli</span> Keskus
+              Lahden <span class="span">Lautapeli</span> Keskus
             </h1>
             <p class="hero-text"> <span style="color:#03b1fc; font-size:50px; font-weight: bold; margin-bottom:-43px">
-            Toiminta on tauolla
+            Viikottaiset peli-illat alkaa 6.2.2026
             </span>
             <p class="hero-text"> <span>
               Lautapeli-ilta järjestetään maanantaina klo 16:00-20:00 Mukkulankadun kampuksella A247 toisen kerroksen kahvilassa, portaiden läheisyydessä.
